--- a/index.html
+++ b/index.html
@@ -29,27 +29,27 @@
     />
     <meta name="language" content="vietnamese" />
 
-    <link rel="stylesheet" href="/css/style.css" />
-    <link rel="stylesheet" href="/css/owl/owl.carousel.css" />
-    <link rel="stylesheet" href="/css/owl/owl.transition.css" />
-    <link rel="stylesheet" href="/css/owl/owl.theme.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/owl/owl.carousel.css" />
+    <link rel="stylesheet" href="css/owl/owl.transition.css" />
+    <link rel="stylesheet" href="css/owl/owl.theme.css" />
 
-    <link rel="stylesheet" href="/css/fonts.css" />
-    <link rel="stylesheet" href="/css/jBox.css" />
-    <link rel="stylesheet" href="/css/jBox.Confirm.css" />
-    <link rel="stylesheet" href="/css/jquery-ui.css" />
+    <link rel="stylesheet" href="css/fonts.css" />
+    <link rel="stylesheet" href="css/jBox.css" />
+    <link rel="stylesheet" href="css/jBox.Confirm.css" />
+    <link rel="stylesheet" href="css/jquery-ui.css" />
 
-    <link rel="stylesheet" href="/css/font_awesome/font-awesome.min.css" />
-    <link rel="stylesheet" href="/css/menu/jquery.mmenu.all.css" />
-    <link rel="stylesheet" href="/css/raty/jquery.raty.css" />
-    <link rel="stylesheet" href="/css/magiczoomplus/magiczoomplus.css" />
-    <link rel="stylesheet" href="/css/simplyscroll/jquery.simplyscroll.css" />
-    <link rel="stylesheet" href="/css/wow/animate.min.css" />
-    <link rel="stylesheet" href="/css/fancybox2/jquery.fancybox.css" />
+    <link rel="stylesheet" href="css/font_awesome/font-awesome.min.css" />
+    <link rel="stylesheet" href="css/menu/jquery.mmenu.all.css" />
+    <link rel="stylesheet" href="css/raty/jquery.raty.css" />
+    <link rel="stylesheet" href="css/magiczoomplus/magiczoomplus.css" />
+    <link rel="stylesheet" href="css/simplyscroll/jquery.simplyscroll.css" />
+    <link rel="stylesheet" href="css/wow/animate.min.css" />
+    <link rel="stylesheet" href="css/fancybox2/jquery.fancybox.css" />
 
-    <link rel="stylesheet" href="/js/slick/slick.css" />
-    <link rel="stylesheet" href="/js/slick-theme.css" />
-    <link rel="stylesheet" href="/js/slick/slick-style.css" />
+    <link rel="stylesheet" href="js/slick/slick.css" />
+    <link rel="stylesheet" href="js/slick-theme.css" />
+    <link rel="stylesheet" href="js/slick/slick-style.css" />
 
     <style type="text/css">
         .fancybox-margin {
