--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <link rel="stylesheet" href="css/wow/animate.min.css" />
     <link rel="stylesheet" href="css/fancybox2/jquery.fancybox.css" />
 
-    <link rel="stylesheet" href="js/slick/slick.css" />
+    <link rel="stylesheet" href="/js/slick/slick.css" />
     <link rel="stylesheet" href="js/slick-theme.css" />
     <link rel="stylesheet" href="js/slick/slick-style.css" />
 
