thêm logo trang chi tiết sản phẩm

--- a/chitietsanpham.html
+++ b/chitietsanpham.html
@@ -818,7 +818,7 @@
             </div>
             <div class="header-bottom">
               <div class="wrap-content d-flex justify-content-between align-items-center">
-                <a class="logo-header d-inline-block" href=""><img src="upload/hinhanh/logostcom-1003.png" alt="Công ty TNHH Phát Triển Tin Học Sáng Tạo" class="mw100"></a>
+                <a class="logo-header d-inline-block" href=""><img src="img/logo.png" alt="Công ty TNHH Phát Triển Tin Học Sáng Tạo" class="mw100"></a>
                 <div class="header-bottom-right d-flex justify-content-between align-items-center">
                   
           <div id="timkiem">
