Khởi tạo ReactJs

--- a/layout_user/sanphamtheodm.html
+++ b/layout_user/sanphamtheodm.html
@@ -29,7 +29,7 @@
     />
     <meta name="language" content="vietnamese" />
 
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="/css/style.css" />
     <link rel="stylesheet" href="css/owl/owl.carousel.css" />
     <link rel="stylesheet" href="css/owl/owl.transition.css" />
     <link rel="stylesheet" href="css/owl/owl.theme.css" />
@@ -3738,4 +3738,4 @@
     </div>
   </body>
 </html>
-0
+
