--- a/DATN - FrontEnd/index.html
+++ b/DATN - FrontEnd/index.html
@@ -8,6 +8,7 @@
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="viewport" content="width=1366, user-scalable=yes" />
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <title>Utech Computer - Laptop - Linh kiện vi tính giá sỉ</title>
 
     <meta name="robots" content="noodp,index,follow" />
