--- a/DATN - FrontEnd/index.html
+++ b/DATN - FrontEnd/index.html
@@ -32,7 +32,7 @@
     />
     <meta name="language" content="vietnamese" />
 
-    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
     <style type="text/css">
       .fancybox-margin {
